travis: Add Coverity-Scan support.

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,11 +9,14 @@ before_install:
   - wget -qO - http://download.opensuse.org/repositories/security:/Zorp/xUbuntu_12.04/Release.key | sudo apt-key add -
   - sudo apt-get update -qq
 
-script:
+before_script:
   - sudo apt-get install -qq devscripts equivs
   - sudo mk-build-deps -i
   - ./autogen.sh
+
+script:
   - ./configure --prefix=$HOME
+  - make clean
   - make
   - make install
   - PYTHONPATH=$HOME/lib/python2.7/site-packages make check
@@ -40,3 +43,15 @@ env:
     - OBS_PROJECT=security:Zorp
     - OBS_SUBPROJECT=5.0
     - OBS_PACKAGE=zorp
+    - secure: "dDT9rtWPh8iYO56qWqatuKRE+gk3xEKKZa/sKSAbb/PyHSsJLkDp9vA4e0+JQNStC4YA+X0L6m4bpt275TKee1ucQg47to/monHmr3FG1LAx6zm8Gq7/4PlFnOo1oxfjFZEUnwF/WNZxjf6Y99n65onKl8fUGknGFnAKf0dYxWo="
+
+addons:
+  coverity_scan:
+    project:
+      name: "balabit/zorp"
+      version: 5.0.0
+      description: "Build submitted via Travis CI"
+    notification_email: coroner@pfeifferszilard.hu
+    build_command_prepend: "./configure; make clean"
+    build_command:   "make -j4"
+    branch_pattern: coverity_scan
