--- a/.travis.yml
+++ b/.travis.yml
@@ -7,16 +7,25 @@ compiler:
 before_install:
   - source ci/obs_common.sh
   - source ci/obs_before_install.sh
+  - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
+  - sudo add-apt-repository -y ppa:h-rayflood/llvm
+  - sudo apt-get update -qq
 
 before_script:
-  - sudo apt-get install devscripts equivs
-  - sudo mk-build-deps -i
+  - sudo apt-get install -qq libstdc++-4.8-dev
+  - if [ "$CXX" = "g++" ]; then sudo apt-get install -qq g++-4.8; fi
+  - if [ "$CXX" = "g++" ]; then export CXX="g++-4.8"; fi
+  - if [ "$CXX" == "clang++" ]; then sudo apt-get install --allow-unauthenticated -qq clang-3.4; fi
+  - if [ "$CXX" == "clang++" ]; then export CXX="clang++-3.4"; fi
   - sudo add-apt-repository -y ppa:dns/gnu
   - sudo apt-get update -qq
+  - sudo apt-get install devscripts equivs
+  - sudo mk-build-deps -i
 
 script:
   - ./autogen.sh
   - ./configure --prefix=$HOME
+  - make clean
   - make
   - make install
   - PYTHONPATH=$HOME/lib/python2.7/site-packages make check
